--- a/view/community/questions.html
+++ b/view/community/questions.html
@@ -209,9 +209,9 @@
             </div>
           </div>
 
-          <button class="button question-btn1" onclick="questionwrite()">질문하기</button>
+          <button class="button question-btn1" onclick="questionwrite()" style="float:right ;">질문하기</button>
 
-          <button class="button question-btn2" onclick="questionanswer()">답변을 기다리는 질문</button>
+          <button class="button question-btn2" onclick="questionanswer()" style="float: right;">답변을 기다리는 질문</button>
 
 
         </div>
