글쓰기 버튼 수정

--- a/view/community/questionDetail.html
+++ b/view/community/questionDetail.html
@@ -584,7 +584,7 @@ $(document).ready(function(){
                     ripple = '';
                 }
 
-                if(isEmpty(val.qcRef) == false || isEmpty(val.qcStep) == false || isEmpty(val.qcDepth) == false){
+                if(isEmpty(val.qcStep) == false || isEmpty(val.qcDepth) == false){
                     var reply 
                     = "<div='comment-feed-item-reply'>"
                         + "<a href='#' class='comment-feed-item-content-author-name'>"
