--- a/view/login/login.html
+++ b/view/login/login.html
@@ -172,7 +172,7 @@
 
 
     // 네이버 로그인 API
-    var naver_id_login = new naver_id_login("dSA9KIZOunKpoBfOJdB9", "http://localhost:8090/collback.html");
+    var naver_id_login = new naver_id_login("dSA9KIZOunKpoBfOJdB9", "http://localhost:8090/view/collback.html");
     var state = naver_id_login.getUniqState();
     naver_id_login.setButton("green", 3, 70);
     naver_id_login.setDomain("http://localhost:8090/index.html");
