--- a/view/commons/header.html
+++ b/view/commons/header.html
@@ -98,6 +98,11 @@
         cursor: pointer;
         display: none;
     }
+    #goStore:hover,
+    #goCommunity:hover {
+        text-decoration: none;
+        color: #f4744c;
+    }
     /* 검색창 */
     #headerSearch{
         height: 52px; width: 50%;
