--- a/view/commons/menuComm.html
+++ b/view/commons/menuComm.html
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navcol-2" style="font-size: 13px;font-family: 'Noto Sans KR', sans-serif;">
                         <ul class="navbar-nav" style="font-family: 'Noto Sans KR', sans-serif;font-size: 20px;color: rgb(0,0,0); margin-left: 20px;">
                                 <li class="nav-item"><a class="nav-link nav_a" href="../../index.html">홈</a></li>
-                                <li class="nav-item"><a class="nav-link nav_a" href="#">인기글</a></li>
+                                <li class="nav-item"><a class="nav-link nav_a" href="../community/mainCommunity.html#">인기글</a></li><!--#hotCard-->
                                 <li class="nav-item"><a class="nav-link nav_a" href="../community/story.html" >스토리</a></li>
                                 <li class="nav-item"><a class="nav-link nav_a" href="../community/questions.html">질문과답변</a></li>
                                 <li class="nav-item"><a class="nav-link nav_a" href="../community/event.html">이벤트</a></li>
