--- a/view/community/mainCommunity.html
+++ b/view/community/mainCommunity.html
@@ -150,7 +150,7 @@
 
 
 
-    <div class="container" style="width: 1200px;">
+    <div class="container" id="hotCard" style="width: 1200px;">
         <h1 style="font-size: 30px;margin-top: 30px; margin-bottom: 15px;"><strong>이번주 인기 인테리어 사진</strong></h1>
         <div style="margin-top: 50px;">
             <div id="hotCardList" class="row">
@@ -186,10 +186,37 @@
     //let sessionId = JSON.parse(sessionStorage.getItem("login"));
     //console.log(sessionId);
 
+    // function fnMove(seq){
+    //     var offset = $("#div" + seq).offset();
+    //     $('html, body').animate({scrollTop : offset.top}, 400);
+    // }
+    let page_url = window.location.href;
+    let page_id = page_url.substring(page_url.lastIndexOf("l") + 1);
+    console.log(page_id)
+
+    if(page_id=='#'){
+        let oset = $("#hotCard").offset();
+        //oset = oset.top + 1000
+        console.log(oset)
+        $('html, body').animate({
+            scrollTop: oset.top-70
+        }, 500);
+    }
+
+    $('#navcol-2 .nav_a').click(function(){//인기글 이동  
+        if($(this).text()=='인기글'){
+            let oset = $("#hotCard").offset();
+            //oset = oset.top + 1000
+            console.log(oset)
+            $('html, body').animate({
+                scrollTop: oset.top-70
+            }, 500);
+            return false;
+        }
+    });
 
     // 금액 콤마 삽입 정규식
     function makeComma(str) {
-
         str = String(str);
         return str.replace(/(\d)(?=(?:\d{3})+(?!\d))/g, '$1,');
     };
@@ -200,7 +227,6 @@
         return Math.ceil(discount/price*100);
     };
 
-    console.log('본문1')
     // '인기 상품' 리스트
     getProductList();
     function getProductList() {
@@ -208,7 +234,6 @@
             url: "http://192.168.0.231:3000/getProductList",
             type: "get",
             success: function (list) {
-
                 console.log(list);
 
                 let app = ""
@@ -303,8 +328,6 @@
             }
         });
     };
-    console.log('본문2')
-    $(document).ready(function() {console.log('본문3') })
 
 </script>
 
