--- a/view/store/cart.html
+++ b/view/store/cart.html
@@ -325,7 +325,7 @@ function getCartList() {
 // 장바구니 아이템 삭제
 function deleteCart(productSeq) {
 
-    if (confirm("해당 상품을 삭제하시겠습니까?") == true) {
+    if (confirm("장바구니에서 삭제하시겠습니까?") == true) {
         $.ajax({
             url: "http://192.168.0.231:3000/deleteCart",
             type: "get",
